--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -1,3 +1,40 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:a6f41ff692fd9cc52bc04431e0f4579c34f5c7a18d47e2b5a3fe2254fb86b4da
-size 732
+name: Upload Food Vectors
+
+on:
+  workflow_dispatch: # Allows manual triggering
+
+jobs:
+  upload:
+    runs-on: ubuntu-latest
+    timeout-minutes: 360 # 6 hour timeout
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          lfs: true # Enable Git LFS
+
+      - name: Pull LFS files
+        run: git lfs pull
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests numpy tqdm tenacity
+
+      - name: Verify required files
+        run: |
+          echo "Checking file sizes and existence:"
+          ls -lh foods_nutrients_map.json
+          ls -l upload_to_cloudflare.py
+
+      - name: Run upload script
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        run: |
+          python upload_to_cloudflare.py
