--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests numpy tqdm tenacity
+          pip install requests numpy tqdm tenacity ratelimit  # Added ratelimit
 
       - name: Verify required files
         run: |
