--- a/.github/workflows/resume_upload.yml
+++ b/.github/workflows/resume_upload.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           lfs: true
 
@@ -18,7 +18,7 @@ jobs:
         run: git lfs pull
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
 
@@ -50,7 +50,8 @@ jobs:
 
       - name: Upload progress file as artifact
         if: always()
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4 # Updated to v4
         with:
           name: upload-progress
           path: upload_progress.pkl
+          retention-days: 5
